add pattern of read a table

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+GameDefaultMap=/Game/StarterContent/Maps/StarterMap.StarterMap
+EditorStartupMap=/Game/StarterContent/Maps/StarterMap.StarterMap
 GlobalDefaultGameMode="/Script/SimpleGame.SimpleGameGameMode"
+GameInstanceClass=/Script/SimpleGame.SimpleGameInstnace
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
