modify start level target

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/StarterMap.StarterMap
-EditorStartupMap=/Game/StarterContent/Maps/StarterMap.StarterMap
+GameDefaultMap=/Game/Maps/StartMap.StartMap
+EditorStartupMap=/Game/Maps/StartMap.StartMap
 GlobalDefaultGameMode="/Script/SimpleGame.SimpleGameGameMode"
 GameInstanceClass=/Script/SimpleGame.SimpleGameInstnace
 
