modifiy mode name, divide class header, add inventory widget sub class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartMap.StartMap
 EditorStartupMap=/Game/Maps/StartMap.StartMap
-GlobalDefaultGameMode="/Script/SimpleGame.SimpleGameGameMode"
+GlobalDefaultGameMode=/Script/SimpleGame.SimpleGameMode
 GameInstanceClass=/Script/SimpleGame.SimpleGameInstnace
 
 [/Script/Engine.RendererSettings]
