modifiy input cofig

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@ GameDefaultMap=/Game/Maps/StartMap.StartMap
 EditorStartupMap=/Game/Maps/StartMap.StartMap
 GlobalDefaultGameMode=/Script/SimpleGame.SimpleGameMode
 GameInstanceClass=/Script/SimpleGame.SimpleGameInstnace
+bOffsetPlayerGamepadIds=False
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
