--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -60,7 +60,7 @@
 +AxisConfig=(AxisKeyName="ValveIndex_Right_Trackpad_Force",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 bAltEnterTogglesFullscreen=True
 bF11TogglesFullscreen=True
-bUseMouseForTouch=True
+bUseMouseForTouch=False
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=False
@@ -72,7 +72,7 @@ bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
 bUseAutocorrect=False
-DefaultViewportMouseCaptureMode=CaptureDuringMouseDown
+DefaultViewportMouseCaptureMode=NoCapture
 DefaultViewportMouseLockMode=DoNotLock
 FOVScale=0.011110
 DoubleClickTime=0.200000
